--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimaryGreen">#37A479</color>
+    <color name="colorSoftGrey">#F5F5F5</color>
+    <color name="colorDarkGrey">#626262</color>
+
 </resources>
