--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -17,4 +17,32 @@
         <item name="android:fontFamily">@font/lato_bold</item>
     </style>
 
+    <style name="SumbanginAjaTextStyle.Regular.Heading4">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Regular.Heading3">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Regular.Heading3.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Regular.Heading4.DarkGrey">
+        <item name="android:textColor">@color/colorDarkGrey</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Bold.Heading1">
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Bold.Heading2">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="SumbanginAjaTextStyle.Bold.Heading2.DarkGrey">
+        <item name="android:textColor">@color/colorDarkGrey</item>
+    </style>
+
 </resources>
