--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -4,75 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="6dp"
-    android:elevation="5dp"
-    app:cardCornerRadius="6dp">
+    android:layout_margin="@dimen/dimen_8dp"
+    android:elevation="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingBottom="12dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imvFood"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvFood"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:background="#DFDFDF" />
+            app:cardCornerRadius="@dimen/dimen_8dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imgFood"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:background="#DFDFDF"
+                android:scaleType="fitXY"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.cardview.widget.CardView>
+
+
+
+        <TextView
+            android:id="@+id/tvFoodName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_double"
-            android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@+id/imvEvent">
+            android:layout_marginStart="12dp"
+            style="@style/SumbanginAjaTextStyle.Bold.Heading3"
+            app:layout_constraintStart_toEndOf="@+id/cvFood"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="NAMA MAKANAN" />
 
-            <TextView
-                android:id="@+id/tvFoodName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/space"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="NAMA MAKANAN" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgFoodOwner"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="6dp"
+            app:layout_constraintStart_toEndOf="@+id/cvFood"
+            app:layout_constraintTop_toBottomOf="@+id/tvFoodName"
+            android:background="@color/colorDarkGrey" />
 
-            <TextView
-                android:id="@+id/tvFoodLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/space"
-                android:layout_marginTop="6dp"
-                android:ellipsize="end"
-                android:gravity="top"
-                android:maxLines="1"
-                tools:text="NAMA PEMILIK" />
+        <TextView
+            android:id="@+id/tv_food_owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgFoodOwner"
+            app:layout_constraintStart_toEndOf="@+id/imgFoodOwner"
+            app:layout_constraintTop_toBottomOf="@+id/tvFoodName"
+            tools:text="NAMA PEMILIK" />
 
-            <TextView
-                android:id="@+id/tvFoodPickupTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="@dimen/space"
-                android:text="4.5"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/recommendationRating"
-                app:layout_constraintStart_toEndOf="@+id/recommendationRating"
-                app:layout_constraintTop_toTopOf="@+id/recommendationRating" />
+        <ImageView
+            android:id="@+id/img_pin"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="6dp"
+            android:src="@drawable/ic_location"
+            app:layout_constraintStart_toEndOf="@+id/cvFood"
+            app:layout_constraintTop_toBottomOf="@+id/imgFoodOwner"/>
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tvFoodOwnerAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/img_pin"
+            app:layout_constraintStart_toEndOf="@+id/imgFoodOwner"
+            app:layout_constraintTop_toBottomOf="@+id/imgFoodOwner"
+            tools:text="NAMA Alamat" />
 
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
