--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,8 +16,8 @@
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_double"
-            android:layout_marginTop="@dimen/space_double"
+            android:layout_marginHorizontal="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,8 +27,8 @@
             android:id="@+id/searchView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_double"
-            android:layout_marginTop="@dimen/space_double"
+            android:layout_marginHorizontal="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:background="@drawable/bg_search_view"
             android:backgroundTint="@color/white"
             android:iconifiedByDefault="false"
@@ -39,33 +39,90 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_triple"
+            android:layout_height="@dimen/dimen_24dp"
             app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/txFoodTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/lnrMenuBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/label_food_around_you"
-        android:layout_marginTop="@dimen/space_double"
-        android:layout_marginHorizontal="@dimen/space_double"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:orientation="horizontal"
+        android:background="@drawable/bg_chip"
+        android:paddingVertical="@dimen/dimen_8dp"
+        android:paddingHorizontal="@dimen/dimen_16dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-    <TextView
-        android:id="@+id/txShowAll"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/btnFoodType"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/bg_chip_selected"
+            android:ellipsize="end"
+            android:maxLines="1"
+            style="@style/SumbanginAjaTextStyle.Bold.Heading3"
+            android:padding="@dimen/dimen_8dp"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            android:layout_marginEnd="@dimen/dimen_4dp"
+            android:text="@string/label_food_type"
+            android:textColor="@color/colorPrimaryGreen" />
+
+        <TextView
+            android:id="@+id/btnNonFoodType"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:ellipsize="end"
+            android:maxLines="1"
+            style="@style/SumbanginAjaTextStyle.Bold.Heading3"
+            android:layout_marginEnd="@dimen/dimen_8dp"
+            android:layout_marginStart="@dimen/dimen_4dp"
+            android:padding="@dimen/dimen_8dp"
+            android:text="@string/label_non_food_type"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHome"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_double"
-        android:text="@string/label_show_all"
-        app:layout_constraintBottom_toBottomOf="@+id/txFoodTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txFoodTitle" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/lnrMenuBar"
+        tools:itemCount="6"
+        tools:listitem="@layout/food_item" />
+
+    <LinearLayout
+        android:id="@+id/llShimmeringContainer"
+        android:visibility="gone"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/homeShimmeringLoading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <include
+                layout="@layout/smh_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+    </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
