--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="dimen_24dp">24dp</dimen>
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_32dp">32dp</dimen>
+    <dimen name="dimen_100dp">100dp</dimen>
 </resources>
