feature(edit-profile) : implement edit profile api, create alternate base response without data

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="dimen_100dp">100dp</dimen>
+    <dimen name="dimen_12dp">12dp</dimen>
 </resources>
