--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -118,7 +118,7 @@
 
     <TextView
         android:id="@+id/tvAddressLabel"
-        android:text="@string/label_phone"
+        android:text="@string/label_alamat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_24dp"
@@ -147,6 +147,18 @@
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSave"
+        style="@style/SumbanginAjaButton.WhiteText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_8dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        android:minHeight="0dp"
+        android:paddingVertical="@dimen/dimen_12dp"
+        android:text="@string/action_save"
+        app:layout_constraintTop_toBottomOf="@+id/tilAddress"/>
 
     <View
         android:id="@+id/viewBgDimmer"
