--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -93,15 +93,15 @@
         app:menuTitle="Bantuan"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnLogout"
         style="@style/SumbanginAjaButton.WhiteText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_32dp"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:minHeight="0dp"
-        android:paddingVertical="@dimen/dimen_16dp"
-        android:text="@string/action_login"
+        android:paddingVertical="@dimen/dimen_12dp"
+        android:text="@string/action_logout"
         app:layout_constraintTop_toBottomOf="@+id/btnHelp"
         tools:layout_editor_absoluteX="16dp" />
 
