--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -89,15 +89,14 @@
 
     </LinearLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHome"
         android:layout_marginTop="@dimen/dimen_8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/lnrMenuBar"
-        tools:itemCount="6"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/food_item" />
 
     <LinearLayout
