--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -22,7 +22,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvNameEvnt"
+                android:id="@+id/tvFoodName"
                 style="@style/SumbanginAjaTextStyle.Bold.Heading2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,17 +43,17 @@
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:text="@string/label_description"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imgFoodOwner" />
+                app:layout_constraintTop_toBottomOf="@+id/imvFoodOwner" />
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgFoodOwner"
+                android:id="@+id/imvFoodOwner"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:layout_marginTop="@dimen/dimen_24dp"
                 android:layout_marginStart="@dimen/dimen_16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvNameEvnt" />
+                app:layout_constraintTop_toBottomOf="@+id/tvFoodName" />
 
             <TextView
                 android:id="@+id/tvFoodOwner"
@@ -61,8 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
                 android:layout_marginTop="@dimen/dimen_8dp"
-                app:layout_constraintStart_toEndOf="@+id/imgFoodOwner"
-                app:layout_constraintTop_toTopOf="@+id/imgFoodOwner"
+                app:layout_constraintStart_toEndOf="@+id/imvFoodOwner"
+                app:layout_constraintTop_toTopOf="@+id/imvFoodOwner"
                 tools:text="NAMA PEMILIK" />
 
             <TextView
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
-                app:layout_constraintStart_toEndOf="@+id/imgFoodOwner"
+                app:layout_constraintStart_toEndOf="@+id/imvFoodOwner"
                 app:layout_constraintTop_toBottomOf="@+id/tvFoodOwner"
                 tools:text="4" />
 
@@ -171,11 +171,29 @@
         android:layout_below="@+id/scrollEvent"
         android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
+        android:layout_marginBottom="@dimen/dimen_16dp"
         android:backgroundTint="@color/colorPrimaryGreen"
-        android:text="Hubungi Food Ranger"
+        android:text="@string/label_call_food_ranger"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+         />
+
+    <RelativeLayout
+        android:id="@+id/loadingContainer"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieLoading"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            app:lottie_rawRes="@raw/loading_lottie"
+            android:layout_centerInParent="true"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true" />
+
+    </RelativeLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
