feature(qr-code) : create qr generator on profile menu

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -63,6 +63,9 @@
             app:popUpTo="@id/main_navigation"
             app:launchSingleTop="true"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_profileFragment_to_foodListFragment"
+            app:destination="@id/foodListFragment" />
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
@@ -76,6 +79,14 @@
             android:name="id"
             app:argType="integer"
             android:defaultValue="0" />
+    </fragment>
+    <fragment
+        android:id="@+id/foodListFragment"
+        android:name="com.bintangpoetra.sumbanginaja.presentation.food.list.FoodListFragment"
+        android:label="FoodListFragment" >
+        <action
+            android:id="@+id/action_foodListFragment_to_foodDetailFragment"
+            app:destination="@id/foodDetailFragment" />
     </fragment>
 
 </navigation>
