--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -164,7 +164,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnDetailAction"
         style="@style/SumbanginAjaButton.WhiteText"
         android:layout_width="match_parent"
         android:layout_height="60dp"
