--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,12 +54,32 @@
         app:menuTitle="Akun Saya"/>
 
     <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
-        android:id="@+id/btnHistory"
+        android:id="@+id/btnQrCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_16dp"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         app:layout_constraintTop_toBottomOf="@+id/btnAccount"
+        app:menuIcon="@drawable/ic_qrcode"
+        app:menuTitle="Barcode Saya"/>
+
+    <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
+        android:id="@+id/btnFoodList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnQrCode"
+        app:menuIcon="@drawable/ic_food"
+        app:menuTitle="Makanan Saya"/>
+
+    <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
+        android:id="@+id/btnHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnFoodList"
         app:menuIcon="@drawable/ic_list"
         app:menuTitle="Riwayat Makanan"/>
 
