--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,9 +39,9 @@
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_email_address"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvEmailLabel">
@@ -52,6 +52,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_email_address"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -69,9 +70,9 @@
         android:id="@+id/tilPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_password"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:passwordToggleEnabled="true"
@@ -83,6 +84,7 @@
             android:layout_height="match_parent"
             android:inputType="textPassword"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_password"
             android:background="@drawable/bg_bordered_edit_text"/>
 
     </com.google.android.material.textfield.TextInputLayout>
