--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -29,9 +29,9 @@
         android:id="@+id/tilFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_full_name"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvFullNameLabel">
@@ -42,6 +42,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_full_name"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -60,9 +61,9 @@
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_email_address"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvEmailLabel">
@@ -73,6 +74,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_email_address"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -90,9 +92,9 @@
         android:id="@+id/tilPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_password"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:passwordToggleEnabled="true"
@@ -104,6 +106,7 @@
             android:layout_height="match_parent"
             android:inputType="textPassword"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_password"
             android:background="@drawable/bg_bordered_edit_text"/>
 
     </com.google.android.material.textfield.TextInputLayout>
