--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -37,9 +37,9 @@
         android:id="@+id/tilFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_full_name"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvFullNameLabel">
@@ -50,6 +50,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_full_name"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -68,9 +69,9 @@
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_email_address"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvEmailLabel">
@@ -81,6 +82,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_email_address"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -99,9 +101,9 @@
         android:id="@+id/tilPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_phone"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvPhoneLabel">
@@ -112,6 +114,7 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_phone"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -130,9 +133,9 @@
         android:id="@+id/tilAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_address"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="12dp"
+        app:hintEnabled="false"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvAddressLabel">
@@ -144,6 +147,7 @@
             android:lines="4"
             android:inputType="textEmailAddress"
             android:padding="@dimen/dimen_20dp"
+            android:hint="@string/hint_address"
             android:background="@drawable/bg_bordered_edit_text" />
 
     </com.google.android.material.textfield.TextInputLayout>
