--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -112,7 +112,8 @@
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textEmailAddress"
+            android:inputType="phone"
+            android:maxLength="13"
             android:padding="@dimen/dimen_20dp"
             android:hint="@string/hint_phone"
             android:background="@drawable/bg_bordered_edit_text" />
