--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,9 @@
         <attr name="menuIcon" format="reference" />
         <attr name="menuTitle" format="string" />
     </declare-styleable>
+
+    <declare-styleable name="CustomTextBoxButton">
+        <attr name="buttonTitle" format="string" />
+    </declare-styleable>
+
 </resources>
