--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -92,17 +92,28 @@
         app:menuIcon="@drawable/ic_help"
         app:menuTitle="Bantuan"/>
 
+    <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
+        android:id="@+id/btnAddFood"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnHelp"
+        app:menuIcon="@drawable/ic_help"
+        app:menuTitle="TAMBAH"
+        tools:layout_editor_absoluteX="16dp" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogout"
         style="@style/SumbanginAjaButton.WhiteText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_32dp"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
+        android:layout_marginTop="@dimen/dimen_32dp"
         android:minHeight="0dp"
         android:paddingVertical="@dimen/dimen_12dp"
         android:text="@string/action_logout"
-        app:layout_constraintTop_toBottomOf="@+id/btnHelp"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddFood"
         tools:layout_editor_absoluteX="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
