feature (add food) : take picture from gallery and camera, get current latitude and longitude feature (province) : get list province and retrieve data feature (city) : get list cities by province id and retrieve data

--- a/app/src/main/res/layout/fragment_food_list.xml
+++ b/app/src/main/res/layout/fragment_food_list.xml
@@ -44,4 +44,15 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAddFood"
+        android:src="@drawable/ic_add"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dimen_16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="asd" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
