--- a/app/src/main/res/layout/fragment_food_list.xml
+++ b/app/src/main/res/layout/fragment_food_list.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="@dimen/dimen_8dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/toolbarFood"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +37,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <include
-                layout="@layout/smh_home"
+                layout="@layout/smh_food_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -54,5 +55,45 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="asd" />
+
+    <LinearLayout
+        android:id="@+id/llEmptyState"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarFood">
+
+        <ImageView
+            android:id="@+id/imgEmptyIcon"
+            android:src="@drawable/ic_empty_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tvEmptyState"
+            android:text="@string/label_food_empty_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
+            style="@style/SumbanginAjaTextStyle.Bold.Heading2"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnToAddFood"
+            android:text="@string/action_add_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="0dp"
+            android:paddingVertical="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
+            app:layout_constraintTop_toBottomOf="@id/tilPassword"
+            style="@style/SumbanginAjaButton.WhiteText"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
