--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,12 +54,22 @@
         app:menuTitle="Akun Saya"/>
 
     <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
-        android:id="@+id/btnQrCode"
+        android:id="@+id/btnQrScanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_16dp"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         app:layout_constraintTop_toBottomOf="@+id/btnAccount"
+        app:menuIcon="@drawable/ic_scanner"
+        app:menuTitle="Barcode Scanner"/>
+
+    <com.bintangpoetra.sumbanginaja.presentation.customview.CustomSettingButton
+        android:id="@+id/btnQrCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_16dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnQrScanner"
         app:menuIcon="@drawable/ic_qrcode"
         app:menuTitle="Barcode Saya"/>
 
@@ -124,5 +134,38 @@
         android:text="@string/action_logout"
         app:layout_constraintTop_toBottomOf="@+id/btnHelp"
         tools:layout_editor_absoluteX="16dp" />
+
+    <View
+        android:id="@+id/viewBgDimmer"
+        android:background="#8D000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/viewBgWhite"
+        android:layout_width="120dp"
+        android:layout_height="70dp"
+        android:background="@color/white"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
