--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="dimen_100dp">100dp</dimen>
     <dimen name="dimen_12dp">12dp</dimen>
+    <dimen name="dimen_300dp">300dp</dimen>
+    <dimen name="dimen_36dp">36dp</dimen>
 </resources>
