--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/imvFood"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
+                android:scaleType="center"
                 tools:background="@color/grey_400"
                 app:layout_constraintTop_toTopOf="parent" />
 
