--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="dimen_300dp">300dp</dimen>
     <dimen name="dimen_36dp">36dp</dimen>
     <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="_12dp">12dp</dimen>
+    <dimen name="dimen_25dp">25dp</dimen>
+    <dimen name="dimen_10dp">10dp</dimen>
+    <dimen name="dimen_10sp">10sp</dimen>
 </resources>
